k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-test-project-service
spec:
  type: ClusterIP
  selector:
    app: cicd-test-project # 将所有流量转发给带有这个标签的Pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
